<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@color/light_yellow">


    <TextView
        android:id="@+id/TitleSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/settings"
        android:gravity="center"
        android:textSize="40dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/TextMusic"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/Music"
            android:textSize="23dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="222dp" />

        <Switch
            android:id="@+id/SwMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/TextSound"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/Sound"
            android:textSize="23dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="292dp" />

        <Switch
            android:id="@+id/SwSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/TextLanguage"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/Language"
            android:textSize="23dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="359dp" />

        <Button
            android:id="@+id/EnglishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="English" />

        <Button
            android:id="@+id/VietnameseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tiếng Việt" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/IconBack"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon" />

        <TextView
            android:id="@+id/TextBack"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Back"
            android:textColor="@color/purple"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>